testsuite/tests/grammar/invalid_token_families/invalid_decl.lkt
import common

lexer foo_lexer {
    family alphanumericals {
        Number <- p"[0-9]+"
        Identifier <- p"[a-zA-Z_][a-zA-Z0-9_]*"
        val foo: Int = 12
    }
}
